# opcode-zh

./: .gitignore  CONTRIBUTING.md  LOCALIZATION_REPORT.md  README.md  README_en.md  index.html  package-lock.json  package.json  report.md  vite.config.ts
.cargo/: config.toml
.github/workflows/: build-linux.yml  build-macos.yml  build-test.yml  claude.yml  pr-check.yml  release.yml
cc_agents/: README.md  git-commit-bot.claudia.json  security-scanner.claudia.json  security-scanner.opcode.json  unit-tests-bot.claudia.json
scripts/: README.md  build-executables.js  bump-version.sh  fetch-and-build.js  prepare-bundle-native.js
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude_binary.rs  lib.rs  main.rs
src-tauri/src/checkpoint/: manager.rs  mod.rs  state.rs  storage.rs
src-tauri/src/commands/: agents.rs  claude.rs  mcp.rs  mod.rs  proxy.rs  sandbox.rs  screenshot.rs  slash_commands.rs  storage.rs  usage.rs
src-tauri/src/process/: mod.rs  registry.rs
src-tauri/src/sandbox/: defaults.rs  executor.rs  mod.rs  platform.rs  profile.rs
src-tauri/tests/: SANDBOX_TEST_SUMMARY.md  TESTS_COMPLETE.md  TESTS_TASK.md  sandbox_tests.rs
src-tauri/tests/sandbox/: README.md  mod.rs
src-tauri/tests/sandbox/common/: claude_real.rs  fixtures.rs  helpers.rs  mod.rs
src-tauri/tests/sandbox/e2e/: agent_sandbox.rs  claude_sandbox.rs  mod.rs
src-tauri/tests/sandbox/integration/: file_operations.rs  mod.rs  network_operations.rs  process_isolation.rs  system_info.rs  violations.rs
src-tauri/tests/sandbox/unit/: executor.rs  mod.rs  platform.rs  profile_builder.rs
src/assets/: shimmer.css
src/components/: AgentExecution.tsx  AgentExecutionDemo.tsx  AgentRunOutputViewer.tsx  AgentRunView.tsx  AgentRunsList.tsx  AgentSandboxSettings.tsx  Agents.tsx  AgentsModal.tsx  AnalyticsConsent.tsx  AnalyticsErrorBoundary.tsx  App.cleaned.tsx  CCAgents.tsx  CheckpointSettings.tsx  ClaudeBinaryDialog.tsx  ClaudeCodeSession.refactored.tsx  ClaudeCodeSession.tsx  ClaudeFileEditor.tsx  ClaudeMemoriesDropdown.tsx  ClaudeVersionSelector.tsx  CollapsibleToolResult.tsx  CreateAgent.tsx  CustomTitlebar.tsx  ErrorBoundary.tsx  ExecutionControlBar.tsx  FilePicker.optimized.tsx  FilePicker.tsx  FloatingPromptInput.tsx  GitHubAgentBrowser.tsx  HooksEditor.tsx  IconPicker.tsx  ImagePreview.tsx  MCPAddServer.tsx  MCPImportExport.tsx  MCPManager.tsx  MCPServerList.tsx  MarkdownEditor.tsx  NFOCredits.tsx  PreviewPromptDialog.tsx  ProjectList.tsx  ProjectSettings.tsx  (+23 more)
src/components/claude-code-session/: MessageList.tsx  (+4 more)
src/contexts/: TabContext.tsx  ThemeContext.tsx
src/hooks/: index.ts  useAnalytics.ts  useApiCall.ts  useDebounce.ts  useLoadingState.ts  usePagination.ts  usePerformanceMonitor.ts  useTabState.ts  useTheme.ts
src/i18n/: index.ts
src/lib/: api-tracker.ts  api.ts  claudeSyntaxTheme.ts  date-utils.ts  hooksManager.ts  linkDetector.tsx  outputCache.tsx  utils.ts
src/services/: sessionPersistence.ts  tabPersistence.ts
src/stores/: README.md  agentStore.ts  sessionStore.ts
src/types/: enhanced-messages.ts  hooks.ts
(+29 files in other folders)
