[package]
name = "claudia"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "claudia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2.0.3"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
dirs = "5.0"
walkdir = "2"
log = "0.4"
env_logger = "0.11"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
gaol = "0.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
sha2 = "0.10"
zstd = "0.13"

[dev-dependencies]
# Testing utilities
tempfile = "3"
serial_test = "3"  # For tests that need to run serially
test-case = "3"  # For parameterized tests
once_cell = "1"  # For test fixture initialization
proptest = "1"  # For property-based testing
pretty_assertions = "1"  # Better assertion output
parking_lot = "0.12"  # Non-poisoning mutex for tests

